updated to reset position if objects are thrown far away and hit the ground

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         frameworkUrl: buildUrl + "/app.framework.js",
         codeUrl: buildUrl + "/app.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "De-Panther",
+        companyName: "AEP",
         productName: "Unity WebXR Export",
         productVersion: "0.1",
       };
